scroll native group membership edges instead of offset paging